Fixed overflow

--- a/frontend/src/scenes/session-recordings/player/PlayerMeta.scss
+++ b/frontend/src/scenes/session-recordings/player/PlayerMeta.scss
@@ -7,7 +7,8 @@
 
     .PlayerMetaPersonProperties {
         background: var(--side);
-        overflow-y: auto;
+        overflow: auto;
+
         border-bottom: 1px solid transparent;
     }
 
